// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`samplesReducer Adds a new sample correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "options": Object {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": Array [],
  },
  "qwe234": Object {
    "complete": false,
    "createdDate": "2021-01-02T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-02T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample 2",
    "options": Object {},
    "type": null,
    "uuid": "qwe234",
  },
}
`;

exports[`samplesReducer Adds validating to an experiment 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "options": Object {
      "someOption": false,
    },
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": Array [
      "validatingExperimentId",
    ],
  },
  "qwe234": Object {
    "complete": false,
    "createdDate": "2021-01-02T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-02T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample 2",
    "options": Object {
      "someOption": false,
    },
    "type": null,
    "uuid": "qwe234",
  },
}
`;

exports[`samplesReducer Delete samples correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "options": Object {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": Array [],
  },
}
`;

exports[`samplesReducer Deletes sample metadata correctly 1`] = `
Object {
  "[object Object]": Object {
    "metadata": Object {
      "metadata-test": "old-value",
    },
  },
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "options": Object {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": Array [],
  },
}
`;

exports[`samplesReducer Handles experimentMetadataRename correctly 1`] = `
Object {
  "asd123": Object {
    "experimentId": "mockExpId",
    "metadata": Object {
      "metadata-new": "value",
    },
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": Array [],
  },
}
`;

exports[`samplesReducer Handles samplesValueInMetadataTrackUpdated correctly 1`] = `
Object {
  "asd123": Object {
    "metadata": Object {
      "metadata-test": "new-value",
    },
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": Array [],
  },
}
`;

exports[`samplesReducer Inserts a new sample correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "options": Object {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": Array [],
  },
}
`;

exports[`samplesReducer Inserts sample metadata correctly 1`] = `
Object {
  "[object Object]": Object {
    "metadata": Object {},
  },
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {
      "metadata-test": "value",
    },
    "name": "test sample",
    "options": Object {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": Array [],
  },
}
`;

exports[`samplesReducer Loads samples correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "options": Object {},
    "type": null,
    "uuid": "asd123",
  },
  "ids": Array [
    "asd123",
    "qwe234",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": Array [],
  },
  "qwe234": Object {
    "complete": false,
    "createdDate": "2021-01-02T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-02T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample 2",
    "options": Object {},
    "type": null,
    "uuid": "qwe234",
  },
}
`;

exports[`samplesReducer Removes validating from an experiment 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "options": Object {
      "someOption": false,
    },
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "validating": Array [
      "otherValidatingExperimentId",
    ],
  },
  "qwe234": Object {
    "complete": false,
    "createdDate": "2021-01-02T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-02T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample 2",
    "options": Object {
      "someOption": false,
    },
    "type": null,
    "uuid": "qwe234",
  },
}
`;

exports[`samplesReducer Sets up saved state correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "options": Object {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`samplesReducer Sets up saving state correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "options": Object {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": "Saving",
  },
}
`;

exports[`samplesReducer Stores error state correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "options": Object {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": "Error message",
    "loading": false,
    "saving": false,
  },
}
`;

exports[`samplesReducer Updates a sample correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "updated name",
    "options": Object {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": Array [],
  },
}
`;

exports[`samplesReducer Updates options correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample",
    "options": Object {
      "someOption": true,
    },
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": Array [],
  },
  "qwe234": Object {
    "complete": false,
    "createdDate": "2021-01-02T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-02T14:48:00.000Z",
    "metadata": Object {},
    "name": "test sample 2",
    "options": Object {
      "someOption": true,
    },
    "type": null,
    "uuid": "qwe234",
  },
}
`;

exports[`samplesReducer Updates sample files correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": Array [
      "features.tsv",
    ],
    "files": Object {
      "features.tsv": Object {
        "error": false,
        "lastModified": "newLastModified",
        "mime": "",
        "name": "features.tsv",
        "objectKey": "",
        "path": "",
        "size": 0,
        "success": false,
        "upload": Object {
          "amplifyPromise": null,
          "status": null,
        },
      },
    },
    "lastModified": "newLastModified",
    "metadata": Object {},
    "name": "test sample",
    "options": Object {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": Array [],
  },
}
`;
